Обновление текстов и ссылок

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                 <div class="main-logo main-logo_desktop">
                     <img src="images/logo.svg" alt="FanDance Logo" width="169" height="24">
                 </div>
-                <h1>Скоро откроемся!</h1>
-                <p>Сейчас наш сервис находится в&nbsp;разработке, но&nbsp;уже совсем скоро, на&nbsp;этом месте, будет открываться каталог игр и&nbsp;новости про&nbsp;танцевальные ритм&#8209;игры.</p>
+                <h1>FanDance — танцевальные и&nbsp;ритм игры</h1>
+                <p>Рассказываем, показываем и&nbsp;просто любим танцевальные и&nbsp;ритм игры. Переходите в&nbsp;каталог для выбора игры и&nbsp;присоединяйтесь к&nbsp;нам&nbsp;ВК!</p>
                 <a href="https://vk.com/fan_dance" target="_blank" class="base-btn text-block__button">Мы ВКонтакте</a>
+                <a href="https://games.fandance.ru" class="base-btn text-block__button">Каталог игр</a>
             </div>
         </div>
     </div>
