--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 </div>
                 <h1>FanDance — танцевальные и&nbsp;ритм игры</h1>
                 <p>Рассказываем, показываем и&nbsp;просто любим танцевальные и&nbsp;ритм игры. Переходите в&nbsp;каталог для выбора игры и&nbsp;присоединяйтесь к&nbsp;нам&nbsp;ВК!</p>
-                <a href="https://vk.com/fan_dance" target="_blank" class="base-btn text-block__button">Мы ВКонтакте</a>
-                <a href="https://games.fandance.ru" class="base-btn text-block__button">Каталог игр</a>
+                <div class="buttons-group">
+                    <a href="https://vk.com/fan_dance" target="_blank" class="base-btn text-block__button">Мы ВКонтакте</a>
+                    <a href="https://games.fandance.ru" class="base-btn text-block__button">Каталог игр</a>
+                </div>
             </div>
         </div>
     </div>
