--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>FanDance – дом танцевальных ритм-игр</title>
@@ -9,7 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <meta name="yandex-verification" content="96ceab58d9383f7c" />
+    <!-- Yandex.RTB -->
+    <script>window.yaContextCb = window.yaContextCb || []</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="main">
@@ -17,34 +22,52 @@
                 <img src="images/logo.svg" alt="FanDance Logo" width="141" height="20">
             </div>
             <div class="bg">
-                <img src="images/girl.png" alt="Промо изображение с девушкой" srcset="images/girl@2x.png 2x" width="740" height="740">
+                <img src="images/girl.png" alt="Промо изображение с девушкой" srcset="images/girl@2x.png 2x" width="740"
+                    height="740">
             </div>
             <div class="text-block">
                 <div class="main-logo main-logo_desktop">
                     <img src="images/logo.svg" alt="FanDance Logo" width="169" height="24">
                 </div>
                 <h1>FanDance — танцевальные и&nbsp;ритм игры</h1>
-                <p>Рассказываем, показываем и&nbsp;просто любим танцевальные и&nbsp;ритм игры. Переходите в&nbsp;каталог для выбора игры и&nbsp;присоединяйтесь к&nbsp;нам&nbsp;ВК!</p>
+                <p>Рассказываем, показываем и&nbsp;просто любим танцевальные и&nbsp;ритм игры. Переходите в&nbsp;каталог
+                    для выбора игры и&nbsp;присоединяйтесь к&nbsp;нам&nbsp;ВК!</p>
                 <div class="buttons-group">
-                    <a href="https://vk.com/fan_dance" target="_blank" class="base-btn text-block__button">Мы ВКонтакте</a>
+                    <a href="https://vk.com/fan_dance" target="_blank" class="base-btn text-block__button">Мы
+                        ВКонтакте</a>
                     <a href="https://games.fandance.ru" class="base-btn text-block__button">Каталог игр</a>
                 </div>
+                <!-- Yandex.RTB R-A-6636151-1 -->
+                <div id="yandex_rtb_R-A-6636151-1"></div>
+                <script>
+                    window.yaContextCb.push(() => {
+                        Ya.Context.AdvManager.render({
+                            "blockId": "R-A-6636151-1",
+                            "renderTo": "yandex_rtb_R-A-6636151-1"
+                        })
+                    })
+                </script>
             </div>
         </div>
     </div>
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    <script type="text/javascript">
+            (function (m, e, t, r, i, k, a) {
+                m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+                m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+            })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
         ym(87741846, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/87741846" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/87741846" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
     <!-- /Yandex.Metrika counter -->
 </body>
+
 </html>
