Temporary remove ad

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://games.fandance.ru" class="base-btn text-block__button">Каталог игр</a>
                 </div>
                 <!-- Yandex.RTB R-A-6636151-1 -->
-                <div id="yandex_rtb_R-A-6636151-1"></div>
+                <!-- <div id="yandex_rtb_R-A-6636151-1"></div>
                 <script>
                     window.yaContextCb.push(() => {
                         Ya.Context.AdvManager.render({
@@ -46,7 +46,7 @@
                             "renderTo": "yandex_rtb_R-A-6636151-1"
                         })
                     })
-                </script>
+                </script> -->
             </div>
         </div>
     </div>
